# arrayfile

./: .gitignore  Makefile  README.md  pyproject.toml
src/arrayfile/: __init__.py  array.py
tests/: test_array.py
